--- a/ela.html
+++ b/ela.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Nurlaila Agustina</title>
 </head>
-<link rel="stylesheet" type="text/css" href="try.css">
+<link rel="stylesheet" type="text/css" href="ela.css">
 <body>
 	<div id="nav">
 		<a href="http://www.smakbo.sch.id">Home</a>
