--- a/ilaa.html
+++ b/ilaa.html
@@ -51,7 +51,7 @@
 <div style=" text-align: center">
 	<img style="border: groove;border-color: #a3a3c2;border-width: 8px; text-align: center;"src="univ.jpg" class="img-rounded" alt="dream univ" width="300" height="200">
 	<img style="border: groove;border-color: #a3a3c2;border-width: 8px; text-align: center; "src="hei.jpg" class="img-rounded" alt="creat it" width="300" height="200">
-	<div style="background-color: #ffb3ff;border: groove;border-color: #1abc9c;border-width: 12px; text-align: center; font-family: serif; font-size: 30px; color: #003366;"> <i><b>Let your sleep creat a big dream, and your act make it truly!</b></i></div>
+	<div style="background-color: #ffb3ff;border: groove;border-color: #1abc9c;border-width: 12px; text-align: center; font-family: serif; font-size: 30px; color: #003366;"> <i><b>Let your sleep create a big dream, and your act make it truly!</b></i></div>
 </div>
 
 <br><br>
