--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ tr:nth-child(even) {
 				<p style="text-align: justify;color: white;font-size: 20px;">Yakni, Aachen, Regensburg, Frankfurt-am-Main, Nuremberg, Berlin, Weimar, Bonn (dan Berlin Timur), dan sejak 1990, Berlin lagi.
 					<img src="aachen.jpg" width="400" height="300" text-align="justify"></p></li>
 			<li style="text-align: justify;color: white;font-size: 24px;">Wilayah Hutan Alami.
-				<p style="text-align: justify;color: white;font-size: 20px;">Sekitar sepertiga dari wilayah Jerman masih merupakan hutan alami, dengan luas hutan terbesar ada di Hesse.
+				<p style="text-align: justify;color: white;font-size: 20px;">Sekitar sepertiga dari wilayah Jerman merupakan hutan alami, dengan luas hutan terbesar ada di Hesse.
 					<img src="hutan.jpg" width="400" height="300" text-align="justify"></p></li>
 			<li style="text-align: justify;color: white;font-size: 24px;">Balapan perahu yang terbuat dari labu.
 				<p style="text-align: justify;color: white;font-size: 20px;">Siapa bilang labu cuma bisa jadi sayur atau "perhiasan" saat Halloween? Di Jerman, labu-labu besar justru digunakan sebagai perahu untuk balapan.
