--- a/ilaa.html
+++ b/ilaa.html
@@ -55,6 +55,6 @@
 </div>
 
 <br><br>
-   <h1 style="background-color: MistyRose ;text-align: center; font-size: 20px">Previous Page<a href="ella.html"> <br>Click Here!</h1>	
+   <h1 style="background-color: MistyRose ;text-align: center; font-size: 20px">Previous Page<a href="index.html"> <br>Click Here!</h1>	
 </body>
 </html>
